unpackaged/objects/Vice_Rector_Note__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Approver__c</fullName>
        <inlineHelpText>If the Primary Approver is not available and you are the Alternate Approver, please fill in your name</inlineHelpText>
        <label>Alternate Approver</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Vice Rector Notes</relationshipLabel>
        <relationshipName>Vice_Rector_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_Issued__c</fullName>
        <label>Date Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>Leaving Yale-NUS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Health_Centre_Date__c</fullName>
        <label>Date Visited</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Health_Centre__c</fullName>
        <label>Have you seen a doctor or counsellor?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RC_Exec_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RC Exec Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vice_Rector_Notes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Vice_Rector_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Department__c</fullName>
        <label>Sub Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>Returning to Yale-NUS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Please state reason for VRN request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Death in the family</fullName>
                </value>
                <value>
                    <fullName>Religious Holidays</fullName>
                </value>
                <value>
                    <fullName>Medical - Physical / Mental Health</fullName>
                </value>
                <value>
                    <fullName>Comparable Emergency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VR_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VR Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vice_Rector_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VR__c</fullName>
        <label>VR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vice Rector Note</label>
    <nameField>
        <displayFormat>VRN-{0000000000}</displayFormat>
        <label>Vice Rector Note ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vice Rector Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>